<resources>
    <string name="app_name">BuildUIWithLayoutEditor2</string>
    <string name="basic_text">some random text. Snake, why are we still here....</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="jobtitle">Jobtitle</string>
    <string name="Employee_information">Employee information</string>
    <string name="Employee_photo">Photo of the employee</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="numberClicked">numberClicked</string>
</resources>
