<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="387dp"
            android:layout_height="583dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="321dp"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/employee1" android:id="@+id/imageView"
                    android:layout_weight="1" android:contentDescription="@string/Employee_photo"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="100dp" android:layout_weight="1">
                <Space
                        android:layout_width="match_parent"
                        android:layout_height="21dp"/>
                <TextView
                        android:text="@string/firstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/firstnameTextView"/>
                <TextView
                        android:text="@string/lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/lastnameTextView"/>
                <TextView
                        android:text="@string/jobtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/jobtitleTextView"/>
                <Space
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
                android:text="@string/Employee_information"
                android:layout_width="match_parent"
                android:layout_height="455dp" android:id="@+id/employeeInfoTextView"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:onClick="numberClicked"
                    android:text="@string/_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/oneTextView" android:layout_weight="1"
                    android:textAlignment="center"/>
            <TextView
                    android:onClick="numberClicked"
                    android:text="@string/_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/twoTextView" android:layout_weight="1"
                    android:textAlignment="center"/>
            <TextView
                    android:onClick="numberClicked"
                    android:text="@string/_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/threeTextView" android:layout_weight="1"
                    android:textAlignment="center"/>
            <TextView
                    android:onClick="numberClicked"
                    android:text="@string/_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/fourTextView" android:layout_weight="1"
                    android:textAlignment="center"/>
            <TextView
                    android:onClick="numberClicked"
                    android:text="@string/_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/fiveTextView" android:layout_weight="1"
                    android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>